<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".DetailedView">

    <TextView
        android:id="@+id/place_Detail_Title"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/province"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="458dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/map_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/place_Detail_Image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cebuimage" />

            <TextView
                android:id="@+id/place_Detail_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cebu"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/place_Detail_Image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/place_Detail_Image"
                app:layout_constraintVertical_bias="0.045" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/map_View"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/txtViewMap"
        app:layout_constraintEnd_toStartOf="@+id/favorite_View"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/near_me" />

    <ImageButton
        android:id="@+id/favorite_View"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="2dp"
        android:text="@string/view_map"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toEndOf="@+id/map_View"
        app:layout_constraintStart_toStartOf="@+id/map_View" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="@string/save_to_favorites"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/favorite_View"
        app:layout_constraintStart_toStartOf="@+id/favorite_View"
        app:layout_constraintTop_toBottomOf="@+id/favorite_View" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:padding="2dp"
        android:text="@string/description"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="468dp"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/place_Detail_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>