<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/homeTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:background="#CCC8C8"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:menu="@menu/top_menu" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="460dp"
        android:layout_height="260dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/homeTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="463dp"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.812"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/homeTextView"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/homecard"
                tools:srcCompat="@drawable/homecard" />

            <TextView
                android:id="@+id/homeTextView"
                android:layout_width="329dp"
                android:layout_height="65dp"
                android:background="#000000"
                android:backgroundTint="@color/material_on_background_emphasis_high_type"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/discover_the_7_460_islands_of_the_philippines"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/homeImage"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/homeImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/homeTextView2"
        android:layout_width="480dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/browse_from_the_categories_below"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewProv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewProv"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/provinces"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Province"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/cities"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_City"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Province"
        android:layout_width="458dp"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_City"
        android:layout_width="458dp"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>