<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="450dp"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            app:cardCornerRadius="15dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_Image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/location_Image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/location_Title"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/province"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/location_Name"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="@+id/location_Name"
                    app:layout_constraintTop_toBottomOf="@+id/location_Name"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/location_Name"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="50dp"
                    android:padding="2dp"
                    android:text="@string/cebu"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.54"
                    app:layout_constraintStart_toEndOf="@+id/cardView_Image"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>